manifest/objects/Apttus_Base2__TelemetrySpan__c.object
<CustomObject>
    <description>Object used to capture and track the progression of an action for analytics that is initiated by a user.</description>
    <fields>
        <fullName>Apttus_Base2__Attributes__c</fullName>
        <description>Long text area field used for capturing extra transaction data (in JSON format or similar) that was not captured in other fields.</description>
        <inlineHelpText>Long text area field used for capturing extra transaction data (in JSON format or similar) that was not captured in other fields.</inlineHelpText>
        <label>Attributes (Extra Operation Data)</label>
        <length>64000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__CodeFunction__c</fullName>
        <description>Name of the method or function where the operation occurred.</description>
        <inlineHelpText>Name of the method or function where the operation occurred.</inlineHelpText>
        <label>Code Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__CodeLineNumber__c</fullName>
        <description>Line number where this record was logged.</description>
        <inlineHelpText>Line number where this record was logged.</inlineHelpText>
        <label>Code Line Number</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__EndTimestamp__c</fullName>
        <description>Ending timestamp of the operation being logged.</description>
        <inlineHelpText>Ending timestamp of the operation being logged.</inlineHelpText>
        <label>End Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__IsSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this record has been synchronized with the external system or not. If so, data will be deleted in the next scheduled batch job run.</description>
        <inlineHelpText>Determines whether this record has been synchronized with the external system or not. If so, data will be deleted in the next scheduled batch job run.</inlineHelpText>
        <label>Is Record Synced?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__OperationName__c</fullName>
        <description>Name of operation or event to log.</description>
        <inlineHelpText>Name of operation or event to log.</inlineHelpText>
        <label>Operation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__OrgId__c</fullName>
        <description>Salesforce organization id.</description>
        <inlineHelpText>Salesforce organization id.</inlineHelpText>
        <label>Org Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__PackageName__c</fullName>
        <description>Name of the product or package where this operation occurred.</description>
        <inlineHelpText>Name of the package, resource, or product where this operation occurred.</inlineHelpText>
        <label>Package or Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__PackageVersion__c</fullName>
        <description>Version of the package where this operation occurred.</description>
        <inlineHelpText>Version of the package where this operation occurred.</inlineHelpText>
        <label>Package Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ParentSpanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of a telemetry span record. A record with this field set to null represents the Root span node.</description>
        <inlineHelpText>The parent of a telemetry span record. A record with this field set to null represents the Root span node.</inlineHelpText>
        <label>Parent Span</label>
        <referenceTo>Apttus_Base2__TelemetrySpan__c</referenceTo>
        <relationshipLabel>Telemetry Spans</relationshipLabel>
        <relationshipName>TelemetrySpans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__StartTimestamp__c</fullName>
        <description>Start timestamp of the operation being logged.</description>
        <inlineHelpText>Start timestamp of the operation being logged.</inlineHelpText>
        <label>Start Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Telemetry Span</label>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Telemetry Spans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>